--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -81,10 +81,24 @@ body{
         h1{
             margin-bottom: 5%;
         }
+        form{
+            margin-bottom: 5%;
+
+            label{
+                font-size: 2rem;
+                font-weight: bold;
+            }
+            input{
+                font-size: 1.5rem;
+                border: #01ae06 2px solid;
+                border-radius: 12px;
+                padding: 1% 2%;
+            }
+        }
         article{
             display: grid;
             grid-template-columns: 1fr;
-            width: 90%;
+            width: 100%;
             row-gap: 8px;
 
             div{
@@ -110,7 +124,7 @@ body{
                     
                 }
                 p:nth-child(4){
-                    grid-column: 1/4;
+                    grid-column: 1/3;
                     max-width: 100%;
                     overflow-wrap: break-word;
                     justify-self: flex-start;
@@ -122,9 +136,13 @@ body{
                 }
                 form{
                     grid-column: 3;
+                    grid-row: 2/4;
                     justify-self: center;
                     text-align: center;
                     font-size: 2rem;
+                    row-gap: 10%;
+                    display: grid;
+                    grid-template-rows: repeat(3, 1fr);
 
                     input[type="submit"], select{
                         font-size: 1.2rem;
