--- a/Inicio/inicio.css
+++ b/Inicio/inicio.css
@@ -201,6 +201,9 @@ body{
                 h1, h2{
                     font-size: 1.8rem;
                 }
+                h2{
+                    grid-column: 3;
+                }
                 >*{
                     font-size: 1.5rem;
                     width: 100%;
