--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -81,25 +81,39 @@ body{
         h1{
             margin-bottom: 5%;
         }
-        form{
+        >form{
             margin-bottom: 5%;
+            display: grid;
+            grid-template-columns: 1.5fr 2fr 2fr 0.5fr 2fr;
+            grid-template-rows: 8vb 8vb;
+            row-gap: 4vb;
+            column-gap: 1vw;
 
             label{
                 font-size: 2rem;
                 font-weight: bold;
+                grid-column: 1;
             }
-            input{
+            input,select{
                 font-size: 1.5rem;
                 border: #01ae06 2px solid;
                 border-radius: 12px;
-                padding: 1% 2%;
+                padding: 1%;
             }
+            input[type="submit"]{
+                grid-row: 1/3;
+                grid-column: 5;
+                height: 10vb;
+                width: 10vw;
+                align-self: center;
+            }
+
         }
         article{
             display: grid;
             grid-template-columns: 1fr;
             width: 100%;
-            row-gap: 8px;
+            row-gap: 4vb;
 
             div{
                 background-color: white;
@@ -151,6 +165,17 @@ body{
                         padding: 2%;
                     }
                 }
+            }
+
+            .groupResult{
+                
+                background-color: white;
+                border: 5px #01ae06;
+                border-style: hidden solid solid hidden;
+                border-radius: 25px;
+                height: auto;
+                padding: 5% 3%;
+                color: black;
             }
         }
     }
